# db-sync-agent

./: .gitignore  README.md  config.json  conflict_monitor.py  debug_triggers.py  fixed_sync_architecture.py  gui_main.py  main.py  pyproject.toml  requirements.txt  run_gui.py  sync_diagnostic.py
core/: config.py  connector.py  runner.py  schema.py  sync_engine.py
core/scheduler/: jobs.py
doc/: config_reference.md  simulation_guide.md  sync_process_flow.md
gui/: gui_main.py  gui_main_old.py  logger.py
gui/components/: button_panel.py  control_buttons.py  log_viewer.py  status_bar.py  status_label.py  sync_controls.py  sync_pair_form.py  system_tray.py  table_selector.py
gui/utils/: gui_logger.py  logger.py
gui/views/: config_editor.py  main_window.py
gui_new/: .auth  app.py  main_window.py
gui_new/components/: config_editor.py  db_pair_selector.py  db_pairs_manager.py  log_viewer.py  password_dialog.py  sync_controls.py  table_selector.py
gui_new/utils/: config_manager.py  detailed_logger.py  startup_manager.py
scheduler/: jobs.py
tests/: test_config.py  test_connector.py  test_schema.py  test_sync_engine.py
