[project]
authors = [
    "Moses Oghene ( @LocalDevv )"
]
name = "db-sync-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "nuitka>=2.7.12",
    "ordered-set>=4.1.0",
    "pyinstaller>=6.14.2",
    "pymysql>=1.1.1",
    "pyside6>=6.9.1",
    "python-dotenv>=1.1.1",
    "requests==2.32.4",
    "zstandard>=0.23.0",
]
